[package]
name = "programming-bitcoin"
version = "0.1.0"
authors = ["Satoshi Amemiya <satoshi_amemiya@voyagegroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
num = "0.4.0"
num-bigint = "0.3.1"
num-iter = "0.1.42"
num-traits = "0.2.14"
once_cell = "1.7.2"
rand = "0.8.3"
